fix: change overflow-x property from hidden to clip

--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@ body {
 	min-height: 100%;
 	margin: 0;
 	padding: 0;
-	overflow-x: hidden;
+	overflow-x: clip;
 	/* biome-ignore lint/complexity/noImportantStyles: Theme consistency requires overriding inline styles */
 	background-color: var(--color-background) !important;
 }
@@ -690,7 +690,8 @@ body,
 		width: 0;
 		height: 0;
 	}
-	* {
+	html,
+    body {
 		scrollbar-width: none;
 		-ms-overflow-style: none;
 	}
